整体文件夹

--- a/src/assets/css/detail.less
+++ b/src/assets/css/detail.less
@@ -535,10 +535,12 @@
 }
 
 .v-spinner {
-    position: absolute;
-    left: 500/@r;
-    top: 1100/@r;
+    position: absolute!important;
+    left: 50%;
+    top: 50%;
     z-index: 10;
+    margin-top:-25/@r;
+    margin-left: -100/@r;
 }
 
 .con {
